// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render a checkbox with a label 1`] = `
<div>
  <div
    class="css-cjek3-CheckboxContent"
  >
    <input
      class="css-1powirr-CheckboxContent"
      data-testid="test-checkbox"
      id="test"
      type="checkbox"
    />
    <label
      class="css-1cjrmlu-CheckboxContent"
      for="test"
    >
      I am a checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should render a checkbox with no label 1`] = `
<div>
  <div
    class="css-cjek3-CheckboxContent"
  >
    <input
      class="css-1powirr-CheckboxContent"
      data-testid="test-checkbox"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;
